# supalove

./: .dockerignore  .gitignore  ARCHITECTURE_STATUS.md  CLI_docs.md  DEPLOY_TO_COOLIFY.md  GETTING_STARTED.md  Implementation_Plan_Step_4.3.md  Implementation_Plan_Step_5.md  Implementation_Plan_Step_6.md  Improvement_Plan.md  Plan V3.md  Projetc plan.md  README.md  ROADMAP.md  Start.md  Step 5.md  Walkthrough_Step_4.3.md  Walkthrough_Step_5.md  check_auth.py  check_minio.py  coolify_deployment_log.md  debug_backend copy.py  debug_backend.py  docker-compose.coolify.yml  docker-compose.yml  for_open_code.md  full_description.md  logic_documentation.md  manual_test.py  migration_backup.txt  project_analysis.md  repair_project.py  repo_analysis.md  repo_structure.txt  repo_tree1.txt  repo_tree2.txt  sql_export.sql  start_backend.sh  step 4.3.md  test_api.py  (+14 more)
backup_dashboard_working/: package-lock.json  package.json
control-plane/cli/: pyproject.toml
control-plane/cli/src/supalove/: api.py  config.py  main.py
control-plane/cli/src/supalove/commands/: auth.py  deploy.py  init.py  projects.py
dashboard/: Dockerfile  next.config.js  package-lock.json  package.json
docs/: API.md  ARCHITECTURE.md  ARCHITECTURE_VS_PLAN.md  BILLING.md  DEPRECATION_KEYCLOAK_AUTH.md  DEVELOPMENT.md  PROJECT_USER_MANAGEMENT_API.md  README.md  SHARED_PLAN_ARCHITECTURE.md  SHARED_PROJECTS.md  TEST_PLAN.md  USER_GUIDE_PROJECT_USERS.md
monitoring/: loki-config.yml  prometheus.yml
scripts/: check_db_tables.py  create-project.sh  delete-project.sh  extract_from_migrations.py  force_nuke.py  (+11 more)
(+265 files in other folders)
