[project]
name = "supalove-cli"
version = "0.1.0"
description = "CLI for managing Supalove projects"
authors = [
    {name = "Supalove Team", email = "dev@supalove.local"},
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0"
]
requires-python = ">=3.9"

[project.scripts]
supalove = "supalove.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/supalove"]
